fix overflow

--- a/source/sass/blocks/special-offer.scss
+++ b/source/sass/blocks/special-offer.scss
@@ -1,6 +1,7 @@
 .special-offer {
   display: flex;
   height: 100%;
+  overflow: hidden;
 
   @include vp-767 {
     flex-direction: column;
@@ -10,44 +11,37 @@
 
 .special-offer__image {
   width: clamp(90px, 50%, 280px);
+  height: 100%;
   aspect-ratio: 1 / 1.65;
   overflow: hidden;
-  background-color: green;
 
-    @include vp-1199 {
-      width: clamp(90px, 58.8%, 900px);
-      aspect-ratio: 1 / 1.16;
-    }
+  @include vp-1199 {
+    width: clamp(90px, 58.8%, 900px);
+    aspect-ratio: 1 / 1.16;
+  }
 
-    @include vp-767 {
-      width: 100%;
-      aspect-ratio: 1/1.03;
-    }
+  @include vp-767 {
+    width: 100%;
+    aspect-ratio: 1/1.03;
+  }
 
   img {
-    position: relative;
-    top: -19%;
     height: 100%;
     object-fit: cover;
-    object-position: 20px;
-    transform: scale(1.4);
-    aspect-ratio: 1 / 1.65;
+    object-position: 35% 0;
 
     @include vp-1199 {
-      height: initial;
       width: 100%;
-      top: -31%;
-      transform: scale(1.2);
-      object-position: 25px;
-      aspect-ratio:  1 / 1.5;
+      object-position: 50% 16%;
     }
 
     @include vp-767 {
-      top: -37%;
-      left: 8%;
+      position: relative;
+      top: -3%;
+      left: -1%;
       height: initial;
-      transform: scale(1.18);
-      object-position: 0;
+      transform: scale(1.05);
+      object-position: 35% 0;
       aspect-ratio: initial;
     }
   }
@@ -111,7 +105,7 @@
   line-height: 25px;
 
   @include vp-767 {
-    margin-bottom: 40px;
+    margin-bottom: 25px;
   }
 }
 
